fixed navbar and hid pigs on small

--- a/source/stylesheets/_custom.scss
+++ b/source/stylesheets/_custom.scss
@@ -405,3 +405,18 @@ nav{
     background-position: center;
     margin: -100px 0 0 -100px;
  }
+
+.brand-img{
+  max-height: 60px;
+  margin-top: 9px !important;
+  z-index: 9999999999;
+  position: relative;
+}
+
+.brand-logo{
+  z-index: 1;
+}
+
+.button-collapse{
+  color: $dark-blue;
+}
